<resources>
    <string name="app_name">Loyalty</string>
    <string name="imageViewLogo">Logo</string>
    <string name="textViewAutenticandoActivityLogin">Autenticando...</string>
    <string name="buttonActivityLogin">Login</string>
    <string name="textViewCadastrarActivityLogin">Não possui cadastro? Cadastre-se</string>
    <string name="hintEmail">Digite seu e-mail</string>
    <string name="hintSenha">Digite sua senha</string>
    <string name="textViewEsqueceuSenhaActivityLogin">Esqueceu sua senha?</string>
    <string name="hintCelular">Digite o celular</string>
    <string name="hintEndereco">Digite o endereço</string>
    <string name="hintDescricao">Digite a descrição do estabelecimento</string>
    <string name="estabelecimento">Estabelecimento</string>
    <string name="buttonActivityCadastroUsuario">Cadastrar</string>
    <string name="textViewJaPossuiCadastroActivityCadastroUsuario">Já possui cadastro? Faça o login</string>
    <string name="hintNome">Digite seu nome ou do estabelecimento</string>
    <string name="imageViewPerfil">Foto de perfil</string>
    <string name="naoPossuiConexao">Você não possui conexão com internet</string>
    <string name="erroPreenchimentoObrigatorio">Campo de preenchimento obrigatório</string>
    <string name="preenchaTodosOsCampos">Preencha todos os campos indicados</string>
    <string name="criandoPerfil">Estamos criando seu perfil...</string>
    <string name="aguarde">Aguarde</string>
    <string name="estabelecimentoCriadoSucesso">Estabelecimento criado com sucesso</string>
    <string name="ErroCriarEstabelecimento">Ocorreu um erro ao criar o estabelecimento</string>
    <string name="usuarioCriadoSucesso">Usuário criado com sucesso</string>
    <string name="ErroCriarUsuario">Ocorreu um erro ao criar o usuário</string>
    <string name="ErroGravarImagem">Ocorreu um erro ao salvar a foto de perfil</string>
    <string name="InsiraFotoPerfil">Por favor insira uma foto de perfil</string>
    <string name="EmailSendoUsado">Este e-mail já esta em uso</string>
    <string name="SenhaFraca">Coloque uma senha mais forte</string>
    <string name="EmailInvalido">Insira um e-mail válido</string>
    <string name="PreenchaEmail">Preencha o campo de e-mail</string>
    <string name="RedefinicaoSenha">E-mail de redefinição de senha enviado</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="conta">Conta</string>
    <string name="configuracao">Configurações</string>
    <string name="sair">Sair</string>
    <string name="cartoesUsados">Cartões usados</string>
    <string name="opcoes">Opções</string>
    <string name="estabelecimentosProximos">Estabelecimentos próximos</string>
    <string name="promocoes">Promoções</string>
    <string name="atribuirCarimbo">Atribuir carimbo</string>
    <string name="erroAutenticacao">Ocorreu um erro na autenticação</string>
    <string name="erroLoginSenha">Login e/ou senha incorretos</string>
    <string name="seusCartoes">Seus cartões</string>
    <string name="suasPromocoes">Suas promoções</string>
    <string name="naoPossuiPromocoes">Seu estabelecimento ainda não possui nenhuma promoção cadastrada :-(</string>
    <string name="tituoPromocao">Digite o título da promoção</string>
    <string name="descricaoPromocao">Digite uma descrição</string>
    <string name="qntCarimbos">Quantidade de carimbos necessários</string>
    <string name="cadastroPromocao">Cadastro de promoção</string>
    <string name="erroValorInvalido">Valor inválido</string>
    <string name="criandoPromocao">Estamos criando sua promoção...</string>
    <string name="PromocaoCriadaSucesso">Promoção criada com sucesso</string>
    <string name="excluir">Excluir</string>
    <string name="editar">Editar</string>
    <string name="buscarUsuario">Digite o e-mail do usuario</string>
    <string name="atribuindoCarimbo">Atribuindo carimbo...</string>
    <string name="carimboAtribuidoSucesso">Carimbo atribuido com sucesso</string>
    <string name="naoPossuiCartoes">Você ainda não possui nenhum cartão fidelidade :-(</string>

</resources>
