<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/opcoes">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_promotions_ActivityEstabelecimentoPrincipal"
                    android:icon="@drawable/ic_menu_used_cards"
                    android:title="@string/promocoes" />
                <item
                    android:id="@+id/nav_users_cards_ActivityEstabelecimentoPrincipal"
                    android:icon="@drawable/ic_menu_person_add"
                    android:title="@string/atribuirCarimbo" />
            </group>
        </menu>
    </item>

    <item android:title="@string/conta">
        <menu>
            <item
                android:id="@+id/nav_settings_ActivityEstabelecimentoPrincipal"
                android:icon="@drawable/ic_menu_settings"
                android:title="@string/configuracao" />
            <item
                android:id="@+id/nav_exit_ActivityEstabelecimentoPrincipal"
                android:icon="@drawable/ic_menu_exit_to_app"
                android:title="@string/sair" />
        </menu>
    </item>

</menu>
