<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/linearLayoutLoginActivityLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/imageViewActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/imageViewLogo"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@mipmap/ic_launcher"
            app:srcCompat="@mipmap/ic_launcher_round" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutEmailActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextEmailActivityLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintEmail"
                android:inputType="textEmailAddress"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutSenhaActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/editTextSenhaActivityLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hintSenha"
                android:inputType="textPassword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp" />
        </android.support.design.widget.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBarActivityLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewAutenticandoActivityLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/textViewAutenticandoActivityLogin"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textViewErroLoginActivityLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/erroLoginSenha"
            android:textColor="@color/colorError"
            android:textSize="18sp"
            android:visibility="gone" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp">

            <TextView
                android:id="@+id/textViewEsqueceuSenhaActivityLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignStart="@+id/buttonActivityLogin"
                android:paddingBottom="0dp"
                android:paddingEnd="0dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:text="@string/textViewEsqueceuSenhaActivityLogin" />

            <Button
                android:id="@+id/buttonActivityLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/colorPrimary"
                android:gravity="center"
                android:paddingBottom="16dp"
                android:paddingLeft="64dp"
                android:paddingRight="64dp"
                android:paddingTop="16dp"
                android:text="@string/buttonActivityLogin"
                android:textColor="@color/colorWhite" />
        </RelativeLayout>

        <TextView
            android:id="@+id/textViewCadastrarActivityLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/textViewCadastrarActivityLogin"
            android:textSize="16sp" />
    </LinearLayout>

</ScrollView>
