<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTituloFragmentCadastroPromocao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextTituloFragmentCadastroPromocao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tituoPromocao"
                android:inputType="text"
                android:paddingEnd="16dp"
                android:paddingStart="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutDescricaoFragmentCadastroPromocao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextDescricaoFragmentCadastroPromocao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/descricaoPromocao"
                android:inputType="text|textMultiLine"
                android:lines="4"
                android:maxLines="20"
                android:paddingEnd="16dp"
                android:paddingStart="16dp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutQntCarimbosFragmentCadastroPromocao"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/editTextQntCarimbosFragmentCadastroPromocao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/qntCarimbos"
                android:inputType="number"
                android:paddingEnd="16dp"
                android:paddingStart="16dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</ScrollView>